force-app/main/default/objects/Accessories__c/Accessories__c.object-meta.xml
<CustomObject>
    <label>Accessory</label>
    <nameField>
        <label>Accessories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accessories and Similiar Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>