force-app/main/default/objects/Accessories__c/fields/Accessory_Product__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessory Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Accessories1</relationshipName>
    <type>Lookup</type>
</CustomField>