force-app/main/default/objects/Accessories__c/fields/AutoAdd__c.field-meta.xml
<CustomField>
    <fullName>AutoAdd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Add</label>
    <type>Checkbox</type>
</CustomField>