force-app/main/default/objects/Accessories__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>if(left(Accessory_Product__r.Description, len(Name) )=Main_Product__r.Name,Accessory_Product__r.Description,  Name&amp;&apos;, &apos;&amp;Accessory_Product__r.Description)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>