force-app/main/default/objects/Accessories__c/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Accessories</relationshipName>
    <type>Lookup</type>
</CustomField>