force-app/main/default/objects/Accessories__c/fields/ProdAccId__c.field-meta.xml
<CustomField>
    <fullName>ProdAccId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ProdAccId</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>