force-app/main/default/objects/Accessories__c/fields/productname__c.field-meta.xml
<CustomField>
    <fullName>productname__c</fullName>
    <formula>Main_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>